// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Editor/> should call the correct callbacks when removing a button 1`] = `
Array [
  Array [
    "some.template.meta.custom.buttons",
  ],
]
`;

exports[`<Editor/> should call the correct callbacks when removing a button 2`] = `
Array [
  Array [
    Array [
      Object {
        "action": Object {
          "body": Object {
            "application/json": Object {},
            "application/x-www-form-urlencoded": Array [],
            "contentType": "application/json",
          },
          "headers": Array [],
          "method": "GET",
          "params": Array [],
          "url": "www.someurl.com",
        },
        "label": "I am in snapshots",
      },
    ],
  ],
]
`;

exports[`<Editor/> should call the correct callbacks when removing a button 3`] = `
Array [
  Array [
    "some.template.meta.custom.buttons",
    Array [
      "some",
      "absolute",
      "template",
    ],
  ],
]
`;

exports[`<Editor/> should call the correct callbacks when submitting a edited button 1`] = `
Array [
  Array [
    "some.template.meta.custom.buttons",
  ],
]
`;

exports[`<Editor/> should call the correct callbacks when submitting a edited button 2`] = `
Array [
  Array [
    Array [
      Object {
        "action": Object {
          "body": Object {
            "application/json": Object {},
            "application/x-www-form-urlencoded": Array [],
            "contentType": "application/json",
          },
          "headers": Array [],
          "method": "GET",
          "params": Array [],
          "url": "www.someurl.com",
        },
        "label": "I am in snapshots",
      },
      Object {
        "action": Object {
          "body": Object {
            "application/json": Object {},
            "application/x-www-form-urlencoded": Array [],
            "contentType": "application/json",
          },
          "headers": Array [],
          "method": "GET",
          "params": Array [],
          "url": "www.someurl.com",
        },
        "label": "I am in snapshots too",
      },
    ],
  ],
]
`;

exports[`<Editor/> should call the correct callbacks when submitting a new button 1`] = `
Array [
  Array [
    "some.template.meta.custom.buttons",
  ],
]
`;

exports[`<Editor/> should call the correct callbacks when submitting a new button 2`] = `
Array [
  Array [
    Array [
      Object {
        "action": Object {
          "body": Object {
            "application/json": Object {},
            "application/x-www-form-urlencoded": Array [],
            "contentType": "application/json",
          },
          "headers": Array [],
          "method": "GET",
          "params": Array [],
          "url": "www.someurl.com",
        },
        "label": "I am in snapshots",
      },
      Object {
        "action": Object {
          "body": Object {
            "application/json": Object {},
            "application/x-www-form-urlencoded": Array [],
            "contentType": "application/json",
          },
          "headers": Array [],
          "method": "GET",
          "params": Array [],
          "url": "www.someurl.com",
        },
        "label": "I am in snapshots too",
      },
      Object {
        "action": Object {
          "body": Object {
            "application/json": Object {},
            "application/x-www-form-urlencoded": Array [],
            "contentType": "application/json",
          },
          "headers": Array [],
          "method": "GET",
          "params": Array [],
          "url": "",
        },
        "label": "ok",
      },
    ],
  ],
]
`;

exports[`<Editor/> should render with buttons and "add button" button 1`] = `
<div>
  <ul
    class="editList"
  >
    <li
      class="editRow"
    >
      <button
        class="wrapper fill secondary small"
        type="button"
      >
        I am in snapshots
      </button>
      <span
        class="editIcons"
      >
        <i
          class="material-icons"
        >
          edit
        </i>
        <i
          class="material-icons text-danger"
        >
          delete
        </i>
      </span>
    </li>
    <li
      class="editRow"
    >
      <button
        class="wrapper fill secondary small"
        type="button"
      >
        I am in snapshots too
      </button>
      <span
        class="editIcons"
      >
        <i
          class="material-icons"
        >
          edit
        </i>
        <i
          class="material-icons text-danger"
        >
          delete
        </i>
      </span>
    </li>
  </ul>
  <button
    class="wrapper addButton fill secondary small"
    type="button"
  >
    <span
      class="wrapper"
    >
      <i
        class="material-icons icon isLeft small"
      >
        add
      </i>
    </span>
    Add Button
  </button>
</div>
`;
